lang/tests/contract/ui/fail/18-many-elements-in-tuple.stderr
error[E0277]: the trait bound `(u8, u8, u8, u8, u8, u8, u8, u8, u8, u8, u8, u8, u8, u8, u8, u8, u8, u8, u8): You_Should_Use_An_Valid_Input_Type` is not satisfied
  --> tests/contract/ui/fail/18-many-elements-in-tuple.rs:14:17
   |
14 |               _a: (
   |  _________________^
15 | |                 u8,
16 | |                 u8,
17 | |                 u8,
...  |
33 | |                 u8,
34 | |             ),
   | |_____________^ the trait `You_Should_Use_An_Valid_Input_Type` is not implemented for `(u8, u8, u8, u8, u8, u8, u8, u8, u8, u8, u8, u8, u8, u8, u8, u8, u8, u8, u8)`
   |
   = help: the following other types implement trait `You_Should_Use_An_Valid_Input_Type`:
             ()
             (T0, T1, T2, T3, T4, T5, T6, T7, T8, T9, T10, T11, T12, T13, T14, T15, T16, T17)
             (T1, T2, T3, T4, T5, T6, T7, T8, T9, T10, T11, T12, T13, T14, T15, T16, T17)
             (T10, T11, T12, T13, T14, T15, T16, T17)
             (T11, T12, T13, T14, T15, T16, T17)
             (T12, T13, T14, T15, T16, T17)
             (T13, T14, T15, T16, T17)
             (T14, T15, T16, T17)
           and $N others
